# trade

./: .gitignore  Cargo.toml  Containerfile  build_for_alpine.sh  cat_all.sh  cat_src.sh
dsta/: Cargo.toml
dsta/src/: convert.rs  fun.rs  lib.rs  tests.rs
tools/: build_wsta_makepad_wasm.sh  build_wsta_makepad_wasm_threaded.sh  run_wsta_dev.sh  (+1 more)
ttrs/: Cargo.toml  (+1 more)
usta/: Cargo.toml  README.md  build.rs  run_debug.sh
usta/read/: Appendex_b0.md  Appendex_dr.md  Appendex_sb.md  Bot_Laws.md
usta/src/: core.rs  dr_bot0.rs  dr_bot0_ttai_bridge.rs  dr_bot1.rs  dr_bot2.rs  dr_bota.rs  dr_robo.rs  dr_seek.rs  dr_ttai.rs  dr_ttai_mock.rs  main.rs
usta/src/sbot/: buzz_bomber.rs  errors.rs  mod.rs  sally_bot.rs  stealth_bot.rs  swat_bot.rs
usta/src/tests/: future-tests.txt  mod.rs  test_buzz_bomber.rs  test_robo_accounts.rs  test_robo_accounts_comprehensive.rs  test_robo_logic.rs  test_sally_bot.rs  test_stealth_bot.rs  test_swat_bot.rs  util.rs
vsta/: Cargo.toml  cat_aimy.sh
vsta/jpg/: new-chaos-rules.txt
vsta/src/: dat.rs  main.rs
vsta/src/base/: mod.rs
vsta/src/base/v_combo_box/: mod.rs  state.rs  view.rs
vsta/src/base/v_time_span/: mod.rs  state.rs  view.rs
vsta/src/base/v_usa_times/: mod.rs  state.rs  view.rs
vsta/src/base/v_valid_any/: mod.rs  state.rs  view.rs
vsta/src/core/: mod.rs
vsta/src/core/v_bot_action_time/: mod.rs  state.rs  view.rs
vsta/src/core/v_bot_common_info/: mod.rs  state.rs  view.rs
vsta/src/core/v_buzz_abort_time/: mod.rs  state.rs  view.rs
vsta/src/core/v_emerald_collection/: mod.rs  state.rs  view.rs
vsta/src/core/v_haggle_action/: mod.rs  state.rs  view.rs
vsta/src/core/v_haggle_limits/: mod.rs  state.rs  view.rs
vsta/src/core/v_haggle_method/: mod.rs  state.rs  view.rs
vsta/src/core/v_option_chain/: mod.rs  state.rs  view.rs
vsta/src/core/v_sally_enter_way/: mod.rs  state.rs  view.rs
vsta/src/core/v_sally_preset/: mod.rs  state.rs  view.rs
vsta/src/core/v_stea_abort_time/: mod.rs  state.rs  view.rs
vsta/src/core/v_swat_preset/: mod.rs  state.rs  view.rs
vsta/src/form/: mod.rs
vsta/src/form/v_buzz_make/: mod.rs  state.rs  view.rs
vsta/src/form/v_nico/: mod.rs  state.rs  view.rs
vsta/src/form/v_sally_make/: mod.rs  state.rs  view.rs
vsta/src/form/v_stealth_make/: mod.rs  state.rs  view.rs
vsta/src/form/v_swat_make/: mod.rs  state.rs  view.rs
vsta/src/form/v_ttai/: mod.rs
vsta/src/form/v_ttai/v_account_0_update/: mod.rs  view.rs
vsta/src/form/v_ttai/v_all_my_positions/: mod.rs  view.rs
vsta/src/form/v_ttai/v_all_push_tickers/: mod.rs  view.rs
vsta/src/form/v_ttai/v_every_sent_order/: mod.rs  view.rs
vsta/src/form/v_ttai/v_order_update_vec/: mod.rs  view.rs
vsta/src/lens/: mod.rs
vsta/src/lens/v_buzz/: mod.rs  state.rs  view.rs
vsta/src/lens/v_dr_r/: cert.rs  mod.rs  state.rs  view.rs
vsta/src/lens/v_log_notes/: mod.rs  state.rs  view.rs
vsta/src/lens/v_stev/: mod.rs  state.rs  view.rs
wsta/: Cargo.toml  README.md
wsta/src/: actor.rs  main.rs  protocol.rs  seek_bridge.rs  server.rs
wsta/src/web/: embedded_index_html.rs  mod.rs
wsta_makepad/: Cargo.toml  README.md
wsta_makepad/resources/web/: wsta_transport.js
wsta_makepad/src/: app.rs  lib.rs  main.rs  protocol.rs  transport.rs
(+4 files in other folders)
