[package]
name = "dsta"
version = "0.9.1"
edition = "2024"

[dependencies]
# STEVEN EDWARD ELLIOTT MACROS AND LIBRARIES
slog = {path = "../../slog"}
seek = {package="see-k", version = "*"}
ttrs = {path ="../ttrs"}

# SEEK REQUIREMENTS
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
bincode = { version = "1.3"}

quinn = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# DEBUG AND LOGGING
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.1"
