[package]
name = "usta"
version = "0.9.0"
edition = "2021"

[dependencies]
# STEVEN EDWARD ELLIOTT MACROS AND LIBRARIES
slog = { path = "../../slog" }

# SEEK REQUIREMENTS
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
bincode = { version = "1.3" }
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rustls = "0.23"
rustls-pemfile = "2.1"
rand = "0.8.5"

# DEBUG AND LOGGING
log = "0.4"
env_logger = "*"
chrono = { version = "0.4", features = ["serde"] }
log4rs = "1.2"

# APP REQUIREMENTS
dsta = { path = "../dsta" }
ttrs = { path = "../ttrs" }
chrono-tz = "0.10.1"

[build-dependencies]
rcgen = "0.14"
chrono = "0.4"
