[package]
name = "vsta"
version = "0.9.2"
edition = "2024"

[profile.release]
debug = true

[dependencies]

# GUI 
iced = { version = "0.14", features = ["tokio", "canvas", "image", "advanced", "markdown"] }
# plotters-iced = "0.11" // not working with iced 0.14
# plotters = "0.3"
rand = "0.8.5"
log = "0.4"
env_logger = "0.11"
tokio-stream= { version = "0.1", features = ["sync"] }

# STEVEN EDWARD ELLIOTT MACROS AND LIBRARIES
slog = {path = "../../slog"}
# seem = {path = "../../seem"} # seem::seek! 
# seel = {path = "../../seel"}
seek = { package = "see-k", version = "0.1" }

# DEBUG AND LOGGING
pretty-hex = "0.4.1"
chrono = { version = "0.4", features = ["serde"] }

# DATA MANIPULATION
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
bincode = "1.3" 

# SEEK Communications
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
rustls-pemfile = "2.1"  # Add this line
futures = "0.3"
rcgen = "0.13" 

# APPLICATION 
dsta = {path = "../dsta"}

aimd = { package = "allm", path = "../../allm" }

