[package]
name = "wsta"
version = "0.1.0"
edition = "2021"

[dependencies]
dsta = { path = "../dsta" }

tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"
env_logger = "0.11"

quinn = "0.11"
rustls = "0.23"
rustls-pki-types = "1"
